Fixed favorites check
Fix:
  - Readded the loop that populated the user list with favorite movies in the application itself. This is used to check if a movie is already a favorite (in which case the button changes to remove)
  - I should probably git ignore the bin/obj folder already x)

--- a/MovieLibraryApp/Views/FavoritesPage.xaml
+++ b/MovieLibraryApp/Views/FavoritesPage.xaml
@@ -87,7 +87,7 @@
                             <Button
                                 Name="PutRequestButton"
                                 Width="170"
-                                Content="Update to sample movie"
+                                Content="Change to best movie ever?"
                                 FontSize="12"
                                 Tapped="PutRequestButton_OnTapped" />
                         </StackPanel>
